fix: add spacing token

--- a/packages/ibm-products/src/components/CoachmarkButton/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/CoachmarkButton/_storybook-styles.scss
@@ -6,6 +6,7 @@
 //
 
 @use '../../../../ibm-products-styles/src/global/styles/project-settings';
+@use '@carbon/styles/scss/spacing' as *;
 
 // TODO: add any additional styles used by CoachmarkButton.stories.js
 .CoachmarkBaseExampleUsage {
@@ -14,7 +15,7 @@
   max-height: 100%;
   box-sizing: border-box;
   /* stylelint-disable-next-line carbon/layout-use */
-  padding: 1rem;
+  padding: $spacing-05;
   margin-left: 50%;
   transform: translateX(-50%);
 }
