--- a/packages/ibm-products/src/components/FilterPanel/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/FilterPanel/_storybook-styles.scss
@@ -10,10 +10,12 @@
 
 @use '../../../../ibm-products-styles/src/global/styles/project-settings' as
   c4p-settings;
+@use '@carbon/styles/scss/spacing' as *;
+
 $block-class: #{c4p-settings.$pkg-prefix}--filter-panel;
 $carbon: #{c4p-settings.$carbon-prefix}--filter-panel;
 
 .filter-panel-stories__viewport {
   width: 16rem;
-  padding: 1rem;
+  padding: $spacing-05;
 }
