--- a/packages/ibm-products/src/components/WebTerminal/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/WebTerminal/_storybook-styles.scss
@@ -25,7 +25,7 @@ $storybook-block-class: #{c4p-settings.$pkg-prefix}--notifications-panel__story;
 }
 
 .example-terminal {
-  padding: 1rem;
+  padding: $spacing-05;
   color: colors.$gray-10;
   font-family: 'IBM Plex Mono', monospace;
 
